Implemented CREATE
Some missing parts in generating tests for POST. Are looking into it.
